--- a/app/src/main/res/layout/level_template.xml
+++ b/app/src/main/res/layout/level_template.xml
@@ -14,6 +14,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginHorizontal="120dp"
         android:layout_marginTop="75dp"
+        android:textAlignment="center"
         android:background="@color/white"/>
 
     <TextView
@@ -23,6 +24,8 @@
         android:layout_centerHorizontal="true"
         android:layout_marginHorizontal="160dp"
         android:layout_marginTop="110dp"
+        android:textAlignment="center"
+        android:maxLength="4"
         android:background="@color/white" />
 
     <TableLayout
@@ -40,18 +43,19 @@
                 android:id="@+id/button_1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:padding="3dp"
-                android:text="1"/>
+
+                android:text="@string/number_button_1"/>
             <Button
                 android:id="@+id/button_2"
+                android:layout_marginHorizontal="5dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="2"/>
+                android:text="@string/number_button_2"/>
             <Button
                 android:id="@+id/button_3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="3"/>
+                android:text="@string/number_button_3"/>
         </TableRow>
         <TableRow
             android:id="@+id/tableRow_2"
@@ -61,18 +65,18 @@
                 android:id="@+id/button_4"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:padding="3dp"
-                android:text="4"/>
+                android:text="@string/number_button_4"/>
             <Button
                 android:id="@+id/button_5"
+                android:layout_marginHorizontal="5dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="5"/>
+                android:text="@string/number_button_5"/>
             <Button
                 android:id="@+id/button_6"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="6"/>
+                android:text="@string/number_button_6"/>
         </TableRow>
         <TableRow
             android:id="@+id/tableRow_3"
@@ -82,18 +86,18 @@
                 android:id="@+id/button_7"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:padding="3dp"
-                android:text="7"/>
+                android:text="@string/number_button_7"/>
             <Button
                 android:id="@+id/button_8"
+                android:layout_marginHorizontal="5dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="8"/>
+                android:text="@string/number_button_8"/>
             <Button
                 android:id="@+id/button_9"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="9"/>
+                android:text="@string/number_button_9"/>
         </TableRow>
         <TableRow
             android:id="@+id/tableRow_4"
@@ -103,13 +107,13 @@
                 android:id="@+id/clean_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:padding="3dp"
-                android:text="c"/>
+                android:text="@string/clean_button"/>
             <Button
                 android:id="@+id/button_0"
+                android:layout_marginHorizontal="5dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="0"/>
+                android:text="@string/number_button_0"/>
             <Button
                 android:id="@+id/ok_button"
                 android:layout_width="wrap_content"
