--- a/app/src/main/res/layout/activity_calculate_expression_level.xml
+++ b/app/src/main/res/layout/activity_calculate_expression_level.xml
@@ -11,8 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center"
-        android:orientation="vertical"
-       >
+        android:orientation="vertical">
 
         <TextView
             android:id="@+id/expression_text"
