--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,7 +7,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-
+    <color name="green">#00FF00</color>
+    <color name="red">#FF0000</color>
 
     <color name="purple">#9808B1</color>
     <color name="purple_2">#360E3C</color>
