--- a/app/src/main/res/layout/activity_calculate_expression_level.xml
+++ b/app/src/main/res/layout/activity_calculate_expression_level.xml
@@ -4,14 +4,33 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".CalculateExpressionLevel"
+    tools:context=".mainmenu.gamemodesmenu.calculationsmodegamesmenu.calculateexpressionlevel.CalculateExpressionLevel"
     android:background="@color/purple">
 
     <LinearLayout
+        android:id="@+id/flash_screen"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center"
         android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/timer_text"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="120dp"
+            android:layout_marginBottom="50dp"
+            android:textColor="@color/white"
+            android:textAlignment="center" />
+
+        <TextView
+            android:id="@+id/points_text"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="120dp"
+            android:layout_marginBottom="50dp"
+            android:textColor="@color/white"
+            android:textAlignment="center" />
 
         <TextView
             android:id="@+id/expression_text"
@@ -28,7 +47,7 @@
             android:layout_marginHorizontal="160dp"
             android:layout_marginTop="10dp"
             android:background="@color/white"
-            android:maxLength="4"
+            android:maxLength="3"
             android:textAlignment="center" />
 
         <TableLayout
