--- a/app/src/main/res/layout/activity_calculate_expression_level.xml
+++ b/app/src/main/res/layout/activity_calculate_expression_level.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".mainmenu.gamemodesmenu.calculationsmodegamesmenu.calculateexpressionlevel.CalculateExpressionLevel"
+    tools:context=".mainmenu.gamemodes.calculationsmodegames.calculateexpressionlevel.CalculateExpressionLevel"
     android:background="@color/purple">
 
     <LinearLayout
