--- a/app/src/main/res/layout/activity_calculations_mode_games_menu.xml
+++ b/app/src/main/res/layout/activity_calculations_mode_games_menu.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".mainmenu.gamemodesmenu.calculationsmodegamesmenu.CalculationsModeGamesMenu"
+    tools:context=".mainmenu.gamemodes.calculationsmodegames.CalculationsModeGamesMenu"
     android:background="@color/purple">
 
     <LinearLayout
