--- a/app/src/main/res/layout/activity_main_menu.xml
+++ b/app/src/main/res/layout/activity_main_menu.xml
@@ -44,4 +44,17 @@
             android:text="@string/warm_up"
             />
     </LinearLayout>
+
+    <FrameLayout
+        android:id="@+id/games_menu"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <FrameLayout
+            android:id="@+id/game_description"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+        </FrameLayout>
+    </FrameLayout>
 </RelativeLayout>
