--- a/app/src/main/res/layout/activity_main_menu.xml
+++ b/app/src/main/res/layout/activity_main_menu.xml
@@ -46,15 +46,7 @@
     </LinearLayout>
 
     <FrameLayout
-        android:id="@+id/games_menu"
+        android:id="@+id/games_content"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <FrameLayout
-            android:id="@+id/game_description"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-        </FrameLayout>
-    </FrameLayout>
+        android:layout_height="match_parent"/>
 </RelativeLayout>
