--- a/app/src/main/res/layout/fragment_game_description.xml
+++ b/app/src/main/res/layout/fragment_game_description.xml
@@ -3,34 +3,50 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="?attr/fullscreenBackgroundColor"
+    android:background="@color/purple"
     android:theme="@style/ThemeOverlay.AndroidGame.FullscreenContainer"
     tools:context=".mainmenu.games.GameDescriptionFragment">
 
-
-    <FrameLayout
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:fitsSystemWindows="true">
+        android:layout_height="match_parent">
 
-        <LinearLayout
-            android:id="@+id/fullscreen_content_controls"
-            style="@style/Widget.Theme.AndroidGame.ButtonBar.Fullscreen"
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom|center_horizontal"
-            android:orientation="horizontal"
-            tools:ignore="UselessParent">
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:layout_marginHorizontal="60dp"
+            android:layout_margin="60dp"
+            android:layout_centerHorizontal="true">
+            <TextView
+                android:id="@+id/rules_text"
+                android:layout_width="match_parent"
+                android:layout_height="200dp"
+                android:textSize="20sp"
+                android:textAlignment="center"
+                android:paddingTop="50dp"
+                android:background="@color/white"/>
 
             <Button
-                android:id="@+id/dummy_button"
-                style="?android:attr/buttonBarButtonStyle"
-                android:layout_width="0dp"
+                android:id="@+id/start_calculate_expression_level"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="@string/dummy_button" />
+                android:layout_marginHorizontal="50dp"
+                android:layout_marginTop="300dp"
+                android:backgroundTint="@color/white"
+                android:textColor="@color/cardview_dark_background"
+                android:text="@string/start_game"/>
 
-        </LinearLayout>
-    </FrameLayout>
+            <TextView
+                android:id="@+id/transition_timer_text"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:textColor="@color/white"
+                android:textAlignment="center"
+                android:textSize="50sp"/>
+
+        </RelativeLayout>
+    </RelativeLayout>
 
 </FrameLayout>
