--- a/app/src/main/res/layout/activity_calculate_expression_game.xml
+++ b/app/src/main/res/layout/activity_calculate_expression_game.xml
@@ -20,8 +20,8 @@
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="120dp"
             android:layout_marginBottom="50dp"
-            android:textColor="@color/white"
-            android:textAlignment="center" />
+            android:textAlignment="center"
+            android:textColor="@color/white" />
 
         <TextView
             android:id="@+id/points_text"
@@ -29,8 +29,8 @@
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="120dp"
             android:layout_marginBottom="50dp"
-            android:textColor="@color/white"
-            android:textAlignment="center" />
+            android:textAlignment="center"
+            android:textColor="@color/white" />
 
         <TextView
             android:id="@+id/expression_text"
@@ -159,5 +159,12 @@
         </TableLayout>
 
     </LinearLayout>
+
+    <FrameLayout
+        android:id="@+id/game_over_window"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+    </FrameLayout>
 
 </RelativeLayout>
