--- a/app/src/main/res/layout/activity_calculate_expression_game.xml
+++ b/app/src/main/res/layout/activity_calculate_expression_game.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".mainmenu.games.calculationsmodegames.calculateexpressiongame.CalculateExpressionGame"
+    tools:context=".mainmenu.games.calculateexpressiongame.CalculateExpressionGame"
     android:background="@color/purple">
 
     <LinearLayout
