--- a/app/src/main/res/layout/fragment_game_over.xml
+++ b/app/src/main/res/layout/fragment_game_over.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    tools:context=".mainmenu.games.calculationsmodegames.calculateexpressiongame.GameOverFragment">
+    tools:context=".mainmenu.games.GameOverFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
