--- a/app/src/main/res/layout/activity_schulte_table_game.xml
+++ b/app/src/main/res/layout/activity_schulte_table_game.xml
@@ -7,25 +7,48 @@
     android:background="@color/purple"
     tools:context=".mainmenu.games.shultetablegame.SchulteTableGame">
 
+    <TextView
+        android:id="@+id/timer1_text"
+        android:layout_width="146dp"
+        android:layout_height="60dp"
+        android:layout_marginStart="132dp"
+        android:layout_marginTop="116dp"
+        android:textColor="@color/white"
+        android:textAlignment="center"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <TableLayout
         android:id="@+id/schulte_table_place"
         android:layout_width="wrap_content"
         android:layout_height="259dp"
         android:layout_marginStart="74dp"
+        android:layout_marginTop="384dp"
         android:layout_marginEnd="74dp"
-        android:layout_marginBottom="144dp"
+        android:layout_marginBottom="88dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-    <Button
-        android:id="@+id/generate_schulte_table"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="150dp"
-        android:layout_marginBottom="16dp"
-        android:text="Button"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+    <TextView
+        android:id="@+id/score1_text"
+        android:layout_width="148dp"
+        android:layout_height="72dp"
+        android:layout_marginStart="130dp"
+        android:layout_marginTop="48dp"
+        android:textColor="@color/white"
+        android:text="0"
+        android:textAlignment="center"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/timer1_text" />
+
+    <FrameLayout
+        android:id="@+id/game1_over_window"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+    </FrameLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
