turn games into fragments

--- a/app/src/main/res/layout/fragment_game_over.xml
+++ b/app/src/main/res/layout/fragment_game_over.xml
@@ -22,7 +22,7 @@
             app:layout_constraintStart_toStartOf="parent" />
 
         <TextView
-            android:id="@+id/score_text"
+            android:id="@+id/result_score_text"
             android:layout_width="202dp"
             android:layout_height="51dp"
             android:layout_marginTop="257dp"
