--- a/app/src/main/res/layout/activity_game_panel.xml
+++ b/app/src/main/res/layout/activity_game_panel.xml
@@ -26,6 +26,8 @@
         android:layout_marginTop="32dp"
         android:layout_marginEnd="108dp"
         android:text="0"
+        android:textSize="20sp"
+        android:fontFamily="@font/button_font"
         android:textAlignment="center"
         android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
@@ -40,6 +42,8 @@
         android:layout_marginBottom="52dp"
         android:textAlignment="center"
         android:textColor="@color/white"
+        android:textSize="20sp"
+        android:fontFamily="@font/button_font"
         app:layout_constraintBottom_toTopOf="@+id/score_text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
