--- a/app/src/main/res/layout/fragment_game_over.xml
+++ b/app/src/main/res/layout/fragment_game_over.xml
@@ -17,6 +17,8 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="224dp"
             android:text="@string/restart"
+            android:textSize="20sp"
+            android:fontFamily="@font/button_font"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
@@ -25,9 +27,13 @@
             android:id="@+id/result_score_text"
             android:layout_width="202dp"
             android:layout_height="51dp"
-            android:layout_marginTop="257dp"
+            android:layout_marginTop="164dp"
             android:text="Результат: "
+            android:textAlignment="center"
+            android:textSize="20sp"
+            android:fontFamily="@font/button_font"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.497"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -35,10 +41,14 @@
             android:id="@+id/best_score_text"
             android:layout_width="206dp"
             android:layout_height="52dp"
-            android:layout_marginBottom="24dp"
+            android:layout_marginBottom="84dp"
             android:text="Лучший результат: "
+            android:textSize="20sp"
+            android:fontFamily="@font/button_font"
+            android:textAlignment="center"
             app:layout_constraintBottom_toTopOf="@+id/to_menu_button"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.497"
             app:layout_constraintStart_toStartOf="parent" />
 
         <Button
@@ -47,6 +57,8 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="12dp"
             android:text="@string/to_menu"
+            android:textSize="20sp"
+            android:fontFamily="@font/button_font"
             app:layout_constraintBottom_toTopOf="@+id/restart_button"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
