--- a/app/src/main/res/layout/fragment_games_menu.xml
+++ b/app/src/main/res/layout/fragment_games_menu.xml
@@ -24,6 +24,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="5dp"
                 android:layout_weight="1"
+                android:textSize="20sp"
+                android:fontFamily="@font/button_font"
                 android:backgroundTint="@color/purple_2"
                 android:text="@string/schulte_table"
                 android:textAllCaps="false"/>
@@ -33,6 +35,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:textSize="20sp"
+                android:fontFamily="@font/button_font"
                 android:layout_marginBottom="5dp"
                 android:backgroundTint="@color/purple_2"
                 android:text="@string/drawing"
@@ -43,6 +47,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:textSize="20sp"
+                android:fontFamily="@font/button_font"
                 android:backgroundTint="@color/purple_2"
                 android:text="@string/calculate_expression"
                 android:textAllCaps="false"/>
