--- a/app/src/main/res/layout/fragment_game_description.xml
+++ b/app/src/main/res/layout/fragment_game_description.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/purple"
+    android:background="@drawable/gradient_background"
     android:theme="@style/ThemeOverlay.AndroidGame.FullscreenContainer"
     tools:context=".mainmenu.GameDescriptionFragment">
 
