change button background

--- a/app/src/main/res/layout/activity_main_menu.xml
+++ b/app/src/main/res/layout/activity_main_menu.xml
@@ -17,7 +17,12 @@
         android:layout_marginBottom="230dp"
         android:orientation="vertical">
 
-        <Button
+        <com.google.android.material.button.MaterialButton
+
+            android:textColor="@color/white"
+            app:cornerRadius="30dp"
+            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+
             android:id="@+id/battle_button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -28,7 +33,11 @@
             android:backgroundTint="@color/purple_2"
             android:text="@string/battle" />
 
-        <Button
+        <com.google.android.material.button.MaterialButton
+
+            android:textColor="@color/white"
+            app:cornerRadius="30dp"
+            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
             android:id="@+id/training_button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -39,7 +48,10 @@
             android:backgroundTint="@color/purple_2"
             android:text="@string/training" />
 
-        <Button
+        <com.google.android.material.button.MaterialButton
+            android:textColor="@color/white"
+            app:cornerRadius="30dp"
+            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
             android:id="@+id/warm_up_button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -54,5 +66,5 @@
     <FrameLayout
         android:id="@+id/games_content"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent" />
 </RelativeLayout>
