--- a/app/src/main/res/layout/fragment_game_over.xml
+++ b/app/src/main/res/layout/fragment_game_over.xml
@@ -11,7 +11,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <Button
+        <com.google.android.material.button.MaterialButton
+            app:cornerRadius="30dp"
             android:id="@+id/restart_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -19,6 +20,7 @@
             android:text="@string/restart"
             android:textSize="20sp"
             android:fontFamily="@font/button_font"
+            android:backgroundTint="@color/purple_2"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
@@ -51,7 +53,9 @@
             app:layout_constraintHorizontal_bias="0.497"
             app:layout_constraintStart_toStartOf="parent" />
 
-        <Button
+        <com.google.android.material.button.MaterialButton
+            android:backgroundTint ="@color/purple_2"
+            app:cornerRadius="30dp"
             android:id="@+id/to_menu_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
