--- a/app/src/main/res/layout/fragment_game_description.xml
+++ b/app/src/main/res/layout/fragment_game_description.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@drawable/gradient_background"
     android:theme="@style/ThemeOverlay.AndroidGame.FullscreenContainer"
     tools:context=".mainmenu.GameDescriptionFragment">
@@ -15,42 +16,69 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_centerHorizontal="true"
-            android:layout_margin="60dp"
             android:layout_marginHorizontal="60dp"
+            android:layout_marginStart="60dp"
+            android:layout_marginTop="60dp"
+            android:layout_marginEnd="60dp"
+            android:layout_marginBottom="60dp"
             android:orientation="vertical">
+
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/back_button"
+                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/description_text"
+                android:layout_marginHorizontal="50dp"
+                android:layout_marginTop="58dp"
+                android:backgroundTint="@color/purple_2"
+                android:fontFamily="@font/button_font"
+                android:text="@string/back_text"
+                android:textColor="@color/white"
+                android:layout_centerHorizontal="true"
+                android:textSize="20sp"
+                app:cornerRadius="30dp" />
 
             <TextView
                 android:id="@+id/description_text"
-                android:layout_width="match_parent"
-                android:layout_height="200dp"
-                android:background="@color/white"
-                android:paddingTop="50dp"
-                android:textAlignment="center"
-                android:textSize="20sp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:background="@drawable/rounded_corner_view"
+                android:backgroundTint="@color/textview_color"
                 android:fontFamily="@font/button_font"
-                />
+                android:paddingHorizontal="50sp"
+                android:paddingVertical="50sp"
+                android:text="Some description"
+                android:textAlignment="center"
+                android:textSize="20sp" />
 
-            <Button
-                android:id="@+id/start_calculate_expression_level"
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/start_game_button"
+                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_below="@+id/back_button"
                 android:layout_marginHorizontal="50dp"
-                android:layout_marginTop="300dp"
-                android:backgroundTint="@color/white"
-                android:text="@string/start_game"
-                android:textSize="20sp"
+                android:layout_marginTop="-1dp"
+                android:layout_centerHorizontal="true"
+                android:backgroundTint="@color/purple_2"
                 android:fontFamily="@font/button_font"
-                android:textColor="@color/cardview_dark_background" />
+                android:text="@string/start_game"
+                android:textColor="@color/white"
+                android:textSize="20sp"
+                app:cornerRadius="30dp" />
 
             <TextView
                 android:id="@+id/transition_timer_text"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
-                android:textAlignment="center"
+                android:layout_height="225sp"
+                android:layout_below="@+id/start_game_button"
+                android:layout_marginTop="63dp"
                 android:fontFamily="@font/button_font"
+                android:textAlignment="center"
                 android:textColor="@color/white"
-                android:textSize="50sp" />
+                android:textSize="100sp" />
 
         </RelativeLayout>
     </RelativeLayout>
