--- a/app/src/main/res/layout/fragment_calculate_expression_game.xml
+++ b/app/src/main/res/layout/fragment_calculate_expression_game.xml
@@ -9,147 +9,138 @@
     tools:context=".mainmenu.games.calculateexpressiongame.CalculateExpressionGameFragment">
 
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <LinearLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:gravity="center_horizontal|center_vertical"
+        android:orientation="vertical">
 
-        <LinearLayout
+        <TextView
+            android:id="@+id/expression_text"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="120dp"
+            android:background="@color/white"
+            android:textAlignment="center" />
+
+        <TextView
+            android:id="@+id/solution_text"
+            android:layout_width="104dp"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="160dp"
+            android:layout_marginTop="10dp"
+            android:background="@color/white"
+            android:maxLength="3"
+            android:textAlignment="center" />
+
+        <TableLayout
+            android:id="@+id/buttons"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="96dp"
-            android:gravity="center_horizontal|center_vertical"
-            android:orientation="vertical"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+            android:layout_marginTop="10dp">
 
-            <TextView
-                android:id="@+id/expression_text"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="120dp"
-                android:background="@color/white"
-                android:textAlignment="center" />
-
-            <TextView
-                android:id="@+id/solution_text"
-                android:layout_width="104dp"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="160dp"
-                android:layout_marginTop="10dp"
-                android:background="@color/white"
-                android:maxLength="3"
-                android:textAlignment="center" />
-
-            <TableLayout
-                android:id="@+id/buttons"
+            <TableRow
+                android:id="@+id/tableRow_1"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp">
+                android:layout_height="wrap_content">
 
-                <TableRow
-                    android:id="@+id/tableRow_1"
+                <Button
+                    android:id="@+id/button_1"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content">
+                    android:layout_height="wrap_content"
 
-                    <Button
-                        android:id="@+id/button_1"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                    android:text="@string/number_button_1" />
 
-                        android:text="@string/number_button_1" />
-
-                    <Button
-                        android:id="@+id/button_2"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginHorizontal="5dp"
-                        android:text="@string/number_button_2" />
-
-                    <Button
-                        android:id="@+id/button_3"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/number_button_3" />
-                </TableRow>
-
-                <TableRow
-                    android:id="@+id/tableRow_2"
+                <Button
+                    android:id="@+id/button_2"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content">
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="5dp"
+                    android:text="@string/number_button_2" />
 
-                    <Button
-                        android:id="@+id/button_4"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/number_button_4" />
-
-                    <Button
-                        android:id="@+id/button_5"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginHorizontal="5dp"
-                        android:text="@string/number_button_5" />
-
-                    <Button
-                        android:id="@+id/button_6"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/number_button_6" />
-                </TableRow>
-
-                <TableRow
-                    android:id="@+id/tableRow_3"
+                <Button
+                    android:id="@+id/button_3"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content">
+                    android:layout_height="wrap_content"
+                    android:text="@string/number_button_3" />
+            </TableRow>
 
-                    <Button
-                        android:id="@+id/button_7"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/number_button_7" />
+            <TableRow
+                android:id="@+id/tableRow_2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
 
-                    <Button
-                        android:id="@+id/button_8"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginHorizontal="5dp"
-                        android:text="@string/number_button_8" />
-
-                    <Button
-                        android:id="@+id/button_9"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/number_button_9" />
-                </TableRow>
-
-                <TableRow
-                    android:id="@+id/tableRow_4"
+                <Button
+                    android:id="@+id/button_4"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content">
+                    android:layout_height="wrap_content"
+                    android:text="@string/number_button_4" />
 
-                    <Button
-                        android:id="@+id/clean_button"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/clean_button" />
+                <Button
+                    android:id="@+id/button_5"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="5dp"
+                    android:text="@string/number_button_5" />
 
-                    <Button
-                        android:id="@+id/button_0"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginHorizontal="5dp"
-                        android:text="@string/number_button_0" />
+                <Button
+                    android:id="@+id/button_6"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/number_button_6" />
+            </TableRow>
 
-                    <Button
-                        android:id="@+id/ok_button"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="OK" />
-                </TableRow>
-            </TableLayout>
-        </LinearLayout>
+            <TableRow
+                android:id="@+id/tableRow_3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+                <Button
+                    android:id="@+id/button_7"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/number_button_7" />
+
+                <Button
+                    android:id="@+id/button_8"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="5dp"
+                    android:text="@string/number_button_8" />
+
+                <Button
+                    android:id="@+id/button_9"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/number_button_9" />
+            </TableRow>
+
+            <TableRow
+                android:id="@+id/tableRow_4"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+
+                <Button
+                    android:id="@+id/clean_button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/clean_button" />
+
+                <Button
+                    android:id="@+id/button_0"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="5dp"
+                    android:text="@string/number_button_0" />
+
+                <Button
+                    android:id="@+id/ok_button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="OK" />
+            </TableRow>
+        </TableLayout>
+    </LinearLayout>
 
 
 </FrameLayout>
