--- a/app/src/main/res/drawable/circle_progressbar.xml
+++ b/app/src/main/res/drawable/circle_progressbar.xml
@@ -16,7 +16,7 @@
                 android:shape="ring"
                 android:thicknessRatio="50"
                 android:useLevel="true">
-                <solid android:color="@color/red"/>
+                <solid android:color="@color/green"/>
             </shape>
         </rotate>
     </item>
