--- a/app/src/main/res/drawable/purple_button_rounded_corner.xml
+++ b/app/src/main/res/drawable/purple_button_rounded_corner.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
     <corners android:radius = "10dp"/>
-    <stroke android:width = "2dp" android:color = "#ccc" />
-    <solid android:color = "#E0B0FF" />
+    <solid android:color = "@color/purple_2" />
 </shape>
