--- a/app/src/main/res/layout/fragment_calculate_expression_game.xml
+++ b/app/src/main/res/layout/fragment_calculate_expression_game.xml
@@ -2,16 +2,16 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:layout_centerHorizontal="true"
     android:layout_centerVertical="true"
     tools:context=".mainmenu.games.calculateexpressiongame.CalculateExpressionGameFragment">
 
 
     <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:gravity="center_horizontal|center_vertical"
         android:orientation="vertical">
 
@@ -20,18 +20,28 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="120dp"
-            android:background="@color/white"
-            android:textAlignment="center" />
+            android:background="@drawable/textview_rounded_corner"
+            android:backgroundTint="@color/textview_color"
+            android:fontFamily="@font/button_font"
+            android:padding="5sp"
+            android:text="2"
+            android:textAlignment="center"
+            android:textSize="30sp" />
 
         <TextView
             android:id="@+id/solution_text"
-            android:layout_width="104dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="160dp"
             android:layout_marginTop="10dp"
-            android:background="@color/white"
+            android:background="@drawable/textview_rounded_corner"
+            android:backgroundTint="@color/textview_color"
+            android:fontFamily="@font/button_font"
             android:maxLength="3"
-            android:textAlignment="center" />
+
+            android:padding="5sp"
+            android:textAlignment="center"
+            android:textSize="30sp" />
 
         <TableLayout
             android:id="@+id/buttons"
@@ -49,20 +59,33 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
 
-                    android:text="@string/number_button_1" />
+                    android:backgroundTint="@color/purple_2"
+                    android:fontFamily="@font/button_font"
+                    android:text="@string/number_button_1"
+                    android:textSize="20sp"
+                    app:cornerRadius="30dp" />
 
                 <Button
                     android:id="@+id/button_2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginHorizontal="5dp"
-                    android:text="@string/number_button_2" />
+
+                    android:backgroundTint="@color/purple_2"
+                    android:fontFamily="@font/button_font"
+                    android:text="@string/number_button_2"
+                    android:textSize="20sp"
+                    app:cornerRadius="30dp" />
 
                 <Button
                     android:id="@+id/button_3"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/number_button_3" />
+                    android:backgroundTint="@color/purple_2"
+                    android:fontFamily="@font/button_font"
+                    android:text="@string/number_button_3"
+                    android:textSize="20sp"
+                    app:cornerRadius="30dp" />
             </TableRow>
 
             <TableRow
@@ -74,20 +97,32 @@
                     android:id="@+id/button_4"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/number_button_4" />
+                    android:backgroundTint="@color/purple_2"
+                    android:fontFamily="@font/button_font"
+                    android:text="@string/number_button_4"
+                    android:textSize="20sp"
+                    app:cornerRadius="30dp" />
 
                 <Button
                     android:id="@+id/button_5"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginHorizontal="5dp"
-                    android:text="@string/number_button_5" />
+                    android:backgroundTint="@color/purple_2"
+                    android:fontFamily="@font/button_font"
+                    android:text="@string/number_button_5"
+                    android:textSize="20sp"
+                    app:cornerRadius="30dp" />
 
                 <Button
                     android:id="@+id/button_6"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/number_button_6" />
+                    android:backgroundTint="@color/purple_2"
+                    android:fontFamily="@font/button_font"
+                    android:text="@string/number_button_6"
+                    android:textSize="20sp"
+                    app:cornerRadius="30dp" />
             </TableRow>
 
             <TableRow
@@ -99,20 +134,32 @@
                     android:id="@+id/button_7"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/number_button_7" />
+                    android:backgroundTint="@color/purple_2"
+                    android:fontFamily="@font/button_font"
+                    android:text="@string/number_button_7"
+                    android:textSize="20sp"
+                    app:cornerRadius="30dp" />
 
                 <Button
                     android:id="@+id/button_8"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginHorizontal="5dp"
-                    android:text="@string/number_button_8" />
+                    android:backgroundTint="@color/purple_2"
+                    android:fontFamily="@font/button_font"
+                    android:text="@string/number_button_8"
+                    android:textSize="20sp"
+                    app:cornerRadius="30dp" />
 
                 <Button
                     android:id="@+id/button_9"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/number_button_9" />
+                    android:backgroundTint="@color/purple_2"
+                    android:fontFamily="@font/button_font"
+                    android:text="@string/number_button_9"
+                    android:textSize="20sp"
+                    app:cornerRadius="30dp" />
             </TableRow>
 
             <TableRow
@@ -124,20 +171,32 @@
                     android:id="@+id/clean_button"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/clean_button" />
+                    android:backgroundTint="@color/purple_2"
+                    android:fontFamily="@font/button_font"
+                    android:text="@string/clean_button"
+                    android:textSize="20sp"
+                    app:cornerRadius="30dp" />
 
                 <Button
                     android:id="@+id/button_0"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginHorizontal="5dp"
-                    android:text="@string/number_button_0" />
+                    android:backgroundTint="@color/purple_2"
+                    android:fontFamily="@font/button_font"
+                    android:text="@string/number_button_0"
+                    android:textSize="20sp"
+                    app:cornerRadius="30dp" />
 
                 <Button
                     android:id="@+id/ok_button"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="OK" />
+                    android:backgroundTint="@color/purple_2"
+                    android:fontFamily="@font/button_font"
+                    android:text="OK"
+                    android:textSize="20sp"
+                    app:cornerRadius="30dp" />
             </TableRow>
         </TableLayout>
     </LinearLayout>
