--- a/app/src/main/res/layout/fragment_game_description.xml
+++ b/app/src/main/res/layout/fragment_game_description.xml
@@ -13,29 +13,25 @@
         android:layout_height="match_parent">
 
         <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_centerHorizontal="true"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
             android:layout_marginHorizontal="60dp"
-            android:layout_marginStart="60dp"
             android:layout_marginTop="60dp"
-            android:layout_marginEnd="60dp"
-            android:layout_marginBottom="60dp"
+            android:layout_marginBottom="11dp"
             android:orientation="vertical">
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/back_button"
-                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/description_text"
+                android:layout_centerHorizontal="true"
                 android:layout_marginHorizontal="50dp"
                 android:layout_marginTop="58dp"
                 android:backgroundTint="@color/purple_2"
                 android:fontFamily="@font/button_font"
                 android:text="@string/back_text"
-                android:textColor="@color/white"
-                android:layout_centerHorizontal="true"
                 android:textSize="20sp"
                 app:cornerRadius="30dp" />
 
@@ -44,28 +40,25 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
-                android:background="@drawable/rounded_corner_view"
+                android:background="@drawable/textview_rounded_corner"
                 android:backgroundTint="@color/textview_color"
                 android:fontFamily="@font/button_font"
-                android:paddingHorizontal="50sp"
-                android:paddingVertical="50sp"
+                android:padding="50sp"
                 android:text="Some description"
                 android:textAlignment="center"
                 android:textSize="20sp" />
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/start_game_button"
-                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/back_button"
+                android:layout_centerHorizontal="true"
                 android:layout_marginHorizontal="50dp"
                 android:layout_marginTop="-1dp"
-                android:layout_centerHorizontal="true"
                 android:backgroundTint="@color/purple_2"
                 android:fontFamily="@font/button_font"
                 android:text="@string/start_game"
-                android:textColor="@color/white"
                 android:textSize="20sp"
                 app:cornerRadius="30dp" />
 
