--- a/app/src/main/res/layout/fragment_repeat_drawing_game.xml
+++ b/app/src/main/res/layout/fragment_repeat_drawing_game.xml
@@ -9,6 +9,7 @@
     <TableLayout
         android:id="@+id/drawing_layout"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        />
 
 </FrameLayout>
